--- a/charts/fluent/values.yaml
+++ b/charts/fluent/values.yaml
@@ -277,8 +277,13 @@ fluentbit-gcp:
       #at every pod restart we re read all files
       #and read them in parallel we need to read only the last
       #created file in order to avoid 'entry too far behind'
-      #errors.
-      ignore_older: 50m
+      #errors. Also when pod restarts it will re read
+      #(db does not help here read comment below) all files
+      #that < than ignore_older which will lead to duplicated
+      #logs. So to reduce the probability of this happening
+      #we need to set ignore_older to a value bit more than
+      #processing time
+      ignore_older: 10m
       skip_empty_lines: true
       #Because we use gcsfuse to access files on buckets
       #everytime a pod restarts files in filesystem get
@@ -297,8 +302,13 @@ fluentbit-gcp:
       #at every pod restart we re read all files
       #and read them in parallel we need to read only the last
       #created file in order to avoid 'entry too far behind'
-      #errors.
-      ignore_older: 50m
+      #errors. Also when pod restarts it will re read
+      #(db does not help here read comment below) all files
+      #that < than ignore_older which will lead to duplicated
+      #logs. So to reduce the probability of this happening
+      #we need to set ignore_older to a value bit more than
+      #processing time
+      ignore_older: 10m
       buffer_max_size: 2MB
       skip_empty_lines: true
       #Because we use gcsfuse to access files on buckets
@@ -433,7 +443,7 @@ fluentbit-gcp:
           - implicit-dirs
           - uid=1000
           - gid=1000
-          - file-cache:max-size-mb:2048
+          - file-cache:max-size-mb:1024
           - file-cache:cache-file-for-range-read:true
           - file-cache:enable-parallel-downloads:true
           - read_ahead_kb=1024
