--- a/charts/chart_deps/postgres/postgres-cluster/values.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/values.yaml
@@ -11,8 +11,10 @@ postgresql:
     random_page_cost: '1.1'
     effective_io_concurrency: '200'
     log_destination: 'jsonlog'
-    log_rotation_age: '1h'
-    log_filename: 'postgresql-%H.log'
+    log_filename: 'postgresql-%Y-%j.log'
+    log_rotation_age: '1d'
+    log_rotation_size: '0'
+    log_truncate_on_rotation: 'off'
 env: {}
 volume: {}
 podAnnotations: {}
@@ -83,13 +85,14 @@ fluentbit:
     postgres:
       name: tail
       tag: kube.postgres.*
-      path: '/home/postgres/pgdata/pgroot/pg_log/postgresql-??.json'
+      path: '/home/postgres/pgdata/pgroot/pg_log/postgresql-????-???.json'
+      ignore_older: 30m
       read_from_head: true
       skip_long_lines: true
       refresh_interval: 10
       mem_buf_limit: 300MB
       skip_empty_lines: true
-      db: '/home/postgres/pgdata/pgroot/pg_log/postgres.db'
+      db: '/home/postgres/pgdata/pgroot/pg_log/fluentbit.db'
       storage.type: memory
       static_batch_size: 150M
       rotate_wait: 30
